src/snapshots/shellfirm__config__test_config__can_create_default_config_file.snap
---
source: src/config.rs
expression: settings_config.create_default_config_file()
---
Ok(
    (),
)
