src/snapshots/shellfirm__config__test_config__can_load_config_from_file.snap
---
source: src/config.rs
expression: settings_config.load_config_from_file()
---
Ok(
    Config {
        challenge: Math,
        includes: [
            "base",
            "fs",
            "git",
        ],
        version: "",
        checks: [],
    },
)
