src/snapshots/shellfirm__config__test_config__can_load_default_config.snap
---
source: src/config.rs
expression: conf.load_default_config()
---
Ok(
    Config {
        challenge: Math,
        includes: [
            "base",
            "fs",
            "git",
        ],
        version: "",
        checks: [],
    },
)
