src/snapshots/shellfirm__config__test_config__can_write_config_file-2.snap
---
source: src/config.rs
expression: settings_config.read_config_file()
---
Ok(
    "---\nchallenge: Math\nincludes:\n  - base\n  - fs\n  - git\nversion: 0.1.6\nchecks:\n  - test: \"rm\\\\s*(-r|-fr|-rf)\\\\s*(\\\\*|\\\\.\\\\z|\\\\./\\\\z|\\\\.\\\\.|/)\"\n    method: Regex\n    enable: true\n    description: You are going to delete everything in the path.\n    from: fs\n    challenge: Default\n    filters: {}\n  - test: mv+.*/dev/null\n    method: Regex\n    enable: true\n    description: The files will be discarded and destroyed.\n    from: fs\n    challenge: Default\n    filters: {}\n  - test: \".*>(.*)\"\n    method: Regex\n    enable: true\n    description: The above command is used to flush the content of a file.\n    from: fs\n    challenge: Default\n    filters:\n      IsFileExists: \"1\"\n  - test: \"chmod\\\\s*(-R)\\\\s+[0-9]{1,}\\\\s*(\\\\*|\\\\.\\\\z|\\\\./\\\\z|\\\\.\\\\.|\\\\.|/)\"\n    method: Regex\n    enable: true\n    description: Change permission to all root files can brake your some thinks like SSH keys.\n    from: fs\n    challenge: Default\n    filters: {}\n  - test: \"\\\\s*find\\\\s*-delete\"\n    method: Regex\n    enable: true\n    description: Did you -delete flag in the wrong order? find -delete going to delete all the file under your current path.\n    from: fs\n    challenge: Default\n    filters: {}\n  - test: git reset\n    method: Contains\n    enable: true\n    description: This command going to reset all your local changes.\n    from: git\n    challenge: Default\n    filters: {}\n  - test: \":(){ :|: & };:\"\n    method: Contains\n    enable: true\n    description: \"This short line defines a shell function that creates new copies of itself.\\nThe process continually replicates itself, and its copies continually replicate themselves, quickly taking up all your CPU time and memory.\\nThis can cause your computer to freeze. It’s basically a denial-of-service attack.\"\n    from: base\n    challenge: Default\n    filters: {}\n  - test: \"\\\\s*history.*.[|].*.(bash|sh)\"\n    method: Regex\n    enable: true\n    description: You are going to executes every command from the command log that you have already executed.\n    from: base\n    challenge: Default\n    filters: {}\n  - test: \"(\\\\.*)reboot[^.\\\"']*{0,}\"\n    method: Regex\n    enable: true\n    description: You are going to reboot your machine.\n    from: base\n    challenge: Default\n    filters: {}\n  - test: \"(\\\\.*)shutdown[^.\\\"']*{0,}\"\n    method: Regex\n    enable: true\n    description: You are going to shutdown your machine.\n    from: base\n    challenge: Default\n    filters: {}\n",
)
